# try-wgpu

./: Cargo.toml  notes.txt
.cargo/: config.toml
res/: basic.wgsl  ch3.wgsl  lib.rs  mod.rs  skybox.wgsl  text.wgsl
src/: asset.rs  camera.rs  lib.rs  main.rs  skybox.rs  text.rs  texture.rs  util.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/legacy/: camera.rs  mod.rs  skybox.rs
src/legacy/asset/: lifecycle.rs  loader.rs  mod.rs  task.rs
src/render/: mesh_bevy.rs  mod.rs
src/render/mesh/: mod.rs  primitive.rs  util.rs
src/render/resource/: bind.rs  buffer.rs  mod.rs  pipeline.rs  shader.rs
src/resource/: bind.rs  mesh.rs  mesh_static.rs  mod.rs  shader.rs
src/resource/buffer/: mod.rs
src/resource/mesh/: mod.rs  primitive.rs  util.rs
src/text/: mesh.rs  mod.rs
src/window/: commands.rs  events.rs  mod.rs  runner.rs  util.rs
