[package]
name = "try-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repr-trait = "1.0.0"

const_format = "0.2.26"
pollster = "0.2.5"
tobj = "3.2.1"
freetype-rs = "0.31.0"
anyhow = "1.0"
noise = "0.7.0"
bluenoise = "0.2.1"
rand_pcg = "0.3.1"
futures-intrusive = "0.4.0"
gif = "0.11.4"

log = "0.4.17"
env_logger = "0.9.0"

wgpu = "0.13"
winit = "0.26"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = { version = "0.18.0", features = [ "swizzle" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]