[package]
name = "try-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13"
winit = "0.26"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = { version = "0.18.0", features = [ "swizzle" ] }

bevy_app = "0.8.1"
bevy_ecs = "0.8.1"
bevy_asset = "0.8.1"
bevy_reflect = "0.8.1"

repr-trait = "1.0.0"
bitflags = "1.3.2"

pollster = "0.2.5"
futures-intrusive = "0.4.0"
# async-channel = "1.7.1"
# async-executor = "1.4.1"
# futures-lite = "1.12.0"
# crossbeam-channel = "0.5.6"
# num_cpus = "1.13.1"

ahash = "0.7.6"
const_format = "0.2.26"
tobj = "3.2.1"
freetype-rs = "0.31.0"
anyhow = "1.0"
noise = "0.7.0"
bluenoise = "0.2.1"
rand_pcg = "0.3.1"
gif = "0.11.4"

log = "0.4.17"
env_logger = "0.9.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]